--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+
 .page {
     min-width: 1100px;
     /* мы ещё не умеем делать мобильную версию сайта, */
@@ -8,67 +9,80 @@
     /* выше для экранов больше 1600px отцентрировали весь контент */
     font-family: 'Helvetica Neue', Arial, sans-serif;
     color: #000;
-    background-color: #f2f2f2;
-}
-
-.logo {}
-
-.logo_place_header {
-    position: absolute;
-    width: 183px;
-    height: 32px;
-}
-
-.header {
-    height: 100vh;
-    min-height: 600px;
-    max-height: 756px;
     position: relative;
-    /* выше установили ограничения для секции */
-}
+  }
 
-.header__title {
-    width: 730px;
-    font-size: 102px;
-    font-weight: bolder;
-    line-height: 96px;
-}
+    /* все ссылки, которые пользователь не трогал, будут синие */
+    .header__link {
+        color: #2f80ed;
+        text-decoration: none;
+    }
 
-.header__subtitle {
-    position: absolute;
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 25px;
-}
+    .header {
+        display: flex;
+        height: 100vh;
+        min-height: 600px;
+        max-height: 756px;
+        position: relative;
+        background-color: #f2f2f2;
+        /* выше установили ограничения для секции */
+    }
+    
+    .logo_place_header {
+        position: absolute;
+        width: 183px;
+        height: 32px;
+        left: 64px;
+        top: 30px;
+        z-index: 2;
+        /*margin: 30px 64px;*/
+        }
 
-.header__link {}
+    .header__title {
+        display: flex;
+        width: 730px;
+        font-size: 102px;
+        font-weight: bolder;
+        line-height: 96px;
+        justify-content: center;
+        align-self: center;
+        z-index: 2;
+        margin-left: 64px;
+    }
 
-.header__main-illustration {
-    width: 765px;
-    height: 608px;
-    З display: flex;
-    background-image: url(/images/header-image.png);
-    z-index: 2;
-    background-size: cover;
-    position: absolute;
-}
+    .header__subtitle {
+        position: absolute;
+        font-size: 18px;
+        font-weight: normal;
+        line-height: 25px;
+        left: 64px;
+        bottom: 30px;
+        z-index: 2;
+        }
 
+    .header__main-illustration {
+        display: flex;
+        width: 765px;
+        height: 608px;
+        z-index: 1;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+    }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-
-.header__square-pic {
-    height: 568px;
-    width: 568px;
-    background-color: #2f80ed;
-    position: absolute;
-}
-
-
-/* и элемента с модификатором вида ключ-значение */
-
-.table__cell_theme_dark {
-    width: 200px;
-    color: white;
-    margin-right: 0;
-    margin-top: 80px;
-}
+    .header__square-pic {
+        display: flex;
+        height: 568px;
+        width: 568px;
+        background-color: #2f80ed;
+        position: absolute;
+        right: 0;
+        top: 64px;
+    }
+        
+    .table__cell_theme_dark {
+        width: 200px;
+        color: white;
+        margin-right: 0;
+        margin-top: 80px;
+    }
