--- a/styles/style.css
+++ b/styles/style.css
@@ -126,50 +126,58 @@
     }
 /*--------------------table--------------------------*/
     .digits {
+        width: 1100px;
         margin: 100px auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
     }
 
     .section-title {
-        border: 1px solid red;
         width: 60%;
         font-size: 60px;
         font-weight: bolder;
         line-height: 1.15;
+        margin: 0;
     }
 
     .section-subtitle {
-        border: 1px solid red;
         width: 60%;
         font-size: 24px;
         font-weight: normal;
         line-height: 34px;
+        margin-top: 20px;
+        margin-bottom: 0;
     }
 
     .table {
-        border: 1px solid red;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
 
     .table__cell {
-        border: 1px solid red;
+        width: 250px;
+        margin-top: 60px;
     }
 
     .table__heading {
-        border: 1px solid red;
         font-size: 24px;
         font-weight: bolder;
         line-height: 1.15;
     }
 
     .table__text {
-        border: 1px solid red;
         font-size: 18px;
         font-weight: normal;
         line-height: 1.2;
     }
+/*----------------------------------------------*/
 
 
-
-
+    
+    
 
 
 
