--- a/styles/style.css
+++ b/styles/style.css
@@ -140,6 +140,8 @@
         font-weight: bolder;
         line-height: 1.15;
         margin: 0;
+        display: flex;
+        justify-content: center;
     }
 
     .section-subtitle {
@@ -149,6 +151,8 @@
         line-height: 34px;
         margin-top: 20px;
         margin-bottom: 0;
+        display: flex;
+        justify-content: center;
     }
 
     .table {
@@ -174,6 +178,8 @@
         line-height: 1.2;
     }
 /*----------------------------------------------*/
+    
+
 
 
     
