--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@
     background-color: #1f1f1f;
   }
 
-/*-------------------------block-header--------------*/
+/*-------------------------block-header-------------*/
     .header {
         display: flex;
         height: 100vh;
@@ -36,7 +36,6 @@
         left: 64px;
         top: 30px;
         z-index: 2;
-        /*margin: 30px 64px;*/
         }
 
     .header__title {
@@ -85,7 +84,7 @@
         right: 0;
         top: 64px;
     }
-    /*-----------------block-two-colums--------------*/
+/*-----------------block-two-colums-----------------*/
     .description {
         display: flex;
         justify-content: center;
@@ -130,7 +129,7 @@
         font-weight: bolder;
         line-height: 34px;
     }
-/*--------------------table--------------------------*/
+/*--------------------table-------------------------*/
     .digits {
         width: 1100px;
         margin: 100px auto;
@@ -184,7 +183,7 @@
         font-weight: normal;
         line-height: 1.2;
     }
-/*--------------------feynman------------------------*/
+/*--------------------feynman-----------------------*/
     .feynman {
         display: flex;
         flex-direction: column;
@@ -269,8 +268,40 @@
         width: 877px;
         height: 877px;
     }
+/*----------------------footer----------------------*/
+    .footer {
+        border: 1px solid red;
+        min-height: 350px;
+    }
 
+    .footer__columns {
+        display: flex;
+        flex-direction: row;
+        border: 1px solid red;
+        margin: 60px auto 40px;
+        width: 90%;
+    }
 
+    .logo_place_footer {
+        display: flex;
+        border: 1px solid red;
+        width: 183px;
+        height: 35px;
+    }
 
+    .footer__author {
+        color: white;
+    }
 
-/*----------------------------------------------*/
+    .footer__columns_content_copyright {
+        border: 1px solid red;
+        flex-basis: 711px;
+    }
+
+    .footer__columns_content_info {
+        border: 1px solid red;
+    }
+
+    .footer__columns_content_social {
+        border: 1px solid red;
+    }
