--- a/styles/style.css
+++ b/styles/style.css
@@ -201,6 +201,7 @@
         line-height: 1.15;
         z-index: 1;
         margin: 100px 0 0 0;
+        text-align: center;
     }
 
     .feynman__subtitle {
