--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,8 @@
         position: absolute;
         right: 0;
         bottom: 0;
+        background-image: url(../images/header-image.png);
+        background-size: cover;
     }
 
     .header__square-pic {
@@ -231,6 +233,9 @@
         position: absolute;
         left: 0;
         bottom: 0;
+        background: url(../images/feynman.png);
+        background-size: cover;
+        background-repeat: no-repeat;
     }
 /*---------------table theme dark-------------------*/
     .kaufman {
@@ -268,6 +273,9 @@
         right: -210px;
         width: 877px;
         height: 877px;
+        background-image: url(../images/kaufman-triangle.svg);
+        background-size: cover;
+        background-repeat: no-repeat;
     }
 /*----------------------footer----------------------*/
     .footer {
