--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,7 @@
         left: 64px;
         bottom: 30px;
         z-index: 2;
+        max-width: 390px;
         }
 
     .header__link {
@@ -75,6 +76,7 @@
         bottom: 0;
         background-image: url(../images/header-image.png);
         background-size: cover;
+        background-repeat: no-repeat;
     }
 
     .header__square-pic {
@@ -194,6 +196,19 @@
         height: 890px;
     }
 
+    .feynman__illustration {
+        display: flex;
+        width: 867px;
+        height: 637px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        background: url(../images/feynman.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        
+    }
+
     .feynman__title {
         display: flex;
         align-items: center;
@@ -224,18 +239,6 @@
         right: 48px;
         top: 50%;
 
-    }
-
-    .feynman__illustration {
-        display: flex;
-        width: 867px;
-        height: 637px;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        background: url(../images/feynman.png);
-        background-size: cover;
-        background-repeat: no-repeat;
     }
 /*---------------table theme dark-------------------*/
     .kaufman {
