--- a/styles/style.css
+++ b/styles/style.css
@@ -12,14 +12,6 @@
     position: relative;
   }
 
-  .background-white {
-    background-color: #f2f2f2;
-  }
-
-  .background-dark {
-    background-color: #1f1f1f;
-  }
-
 /*-------------------------block-header-------------*/
     .header {
         display: flex;
@@ -27,6 +19,7 @@
         min-height: 600px;
         max-height: 756px;
         position: relative;
+        background-color: #f2f2f2;
     }
     
     .logo_place_header {
@@ -148,7 +141,7 @@
         font-size: 60px;
         font-weight: bolder;
         line-height: 1.15;
-        margin: 0;
+        margin: 0 auto;
         display: flex;
         justify-content: center;
     }
@@ -158,8 +151,7 @@
         font-size: 24px;
         font-weight: normal;
         line-height: 34px;
-        margin-top: 20px;
-        margin-bottom: 0;
+        margin: 20px auto 0 auto;
         display: flex;
         justify-content: center;
     }
@@ -196,6 +188,7 @@
         height: 890px;
         background: url(../images/feynman.png) no-repeat left bottom;
         background-size: 867px 637px;
+        background-color: #f2f2f2;
     }
         
     .feynman__title {
@@ -233,14 +226,14 @@
     .kaufman {
         position: relative;
         overflow: hidden;
+        padding: 90px 0;
+        background-color: #1f1f1f;
     }
+
 
     .table_theme_dark {
         width: 1100px;
-        margin: 90px auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        margin: 0 auto;
     }
 
     .section-title_theme_dark {
@@ -249,6 +242,7 @@
 
     .section-subtitle_theme_dark {
         color: white;
+        
     }
 
     .table__cell_theme_dark {
@@ -275,6 +269,7 @@
         min-height: 350px;
         padding: 60px 0 40px;
         margin: 0;
+        background-color: #1f1f1f;
     }
 
     .footer__columns {
