--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@
         justify-content: center;
         align-self: center;
         z-index: 2;
-        margin-left: 64px;
+        margin: 0 0 0 64px;
     }
 
     .header__subtitle {
@@ -51,7 +51,8 @@
         left: 64px;
         bottom: 30px;
         z-index: 2;
-        max-width: 390px;
+        max-width: 388px;
+        margin: 0;
         }
 
     .header__link {
@@ -171,13 +172,14 @@
         font-size: 24px;
         font-weight: bolder;
         line-height: 1.15;
-        margin: 0 0 20px 0;
+        margin: 0;
     }
 
     .table__text {
         font-size: 18px;
         font-weight: normal;
         line-height: 1.2;
+        margin: 20px 0 0 0;
     }
 /*--------------------feynman-----------------------*/
     .feynman {
@@ -185,7 +187,7 @@
         flex-direction: column;
         align-items: center;
         position: relative;
-        height: 890px;
+        min-height: 890px;
         background: url(../images/feynman.png) no-repeat left bottom;
         background-size: 867px 637px;
         background-color: #f2f2f2;
