--- a/styles/style.css
+++ b/styles/style.css
@@ -93,14 +93,12 @@
 }
 
 .two-columns {
-	border: 1px solid red;
   display: flex;
   justify-content: space-between;
   width: 80%;
 }
 
 .two-columns__brief {
-	border: 1px solid red;
   width: 175px;
   color: #2f80ed;
   font-size: 18px;
@@ -111,7 +109,6 @@
 }
 
 .two-columns__main-text {
-	border: 1px solid red;
   width: 80%;
   min-width: 784px;
   font-size: 24px;
@@ -120,36 +117,95 @@
 }
 
 .two-columns__paragraph {
-	border: 1px solid red;
   margin: 0 0 30px 0;
 }
 
-.two-columns__paragraph:nth-of-type(3n) {
+.two-columns__paragraph:last-of-type {
   margin: 0;
 }
 
 .two-columns__span-accent {
-	border: 1px solid red;
   font-size: 24px;
   font-weight: bolder;
   line-height: 34px;
 }
 
 /*--------------------video-------------------------*/
+.video {
+	width: 1100px;
+	margin: 100px auto 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.video__iframes {
+	display: flex;
+	margin: 50px 0 -50px;
+
+}
+
+.video__iframe {
+	margin-right: 20px;
+}
+
+.video__iframe:last-of-type {
+	margin: 0;
+}
 
 /*--------------------oakley------------------------*/
 .oakley {
-	border: 1px solid red;
 	display: flex;
   justify-content: center;
-  margin: 100px 0;
+  padding: 160px 0 0 0;
+	background-color: #f2f2f2;
 }
 
-.two-columns__paragraph {
-	border: 1px solid red;
-  margin: 0;
+/*--------------------feynman-----------------------*/
+.feynman {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  min-height: 890px;
+  background: url(../images/feynman.png) no-repeat left bottom;
+  background-size: 867px 637px;
+  background-color: #f2f2f2;
+	padding-top: 80px;
 }
+
+.feynman__title {
+  display: flex;
+  align-items: center;
+  width: 648px;
+  font-size: 120px;
+  font-weight: bolder;
+  line-height: 1.15;
+  z-index: 1;
+  text-align: center;
+	margin: 0;
+}
+
+.feynman__subtitle {
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  z-index: 1;
+  margin: 70px 0 0 0;
+}
+
+.feynman__link {
+  color: #2f80ed;
+  text-decoration: none;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  position: absolute;
+  right: 48px;
+  top: 50%;
+
+}
+
 
 /*--------------------table-------------------------*/
 .digits {
@@ -204,50 +260,6 @@
   font-weight: normal;
   line-height: 1.2;
   margin: 20px 0 0 0;
-}
-
-/*--------------------feynman-----------------------*/
-.feynman {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  min-height: 890px;
-  background: url(../images/feynman.png) no-repeat left bottom;
-  background-size: 867px 637px;
-  background-color: #f2f2f2;
-}
-
-.feynman__title {
-  display: flex;
-  align-items: center;
-  width: 648px;
-  font-size: 120px;
-  font-weight: bolder;
-  line-height: 1.15;
-  z-index: 1;
-  margin: 100px 0 0 0;
-  text-align: center;
-}
-
-.feynman__subtitle {
-  font-size: 36px;
-  font-weight: normal;
-  line-height: 51px;
-  z-index: 1;
-  margin: 70px 0 0 0;
-}
-
-.feynman__link {
-  color: #2f80ed;
-  text-decoration: none;
-  font-size: 36px;
-  font-weight: normal;
-  line-height: 51px;
-  position: absolute;
-  right: 48px;
-  top: 50%;
-
 }
 
 /*---------------table theme dark-------------------*/
