--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+@keyframes rotation {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -19,6 +28,7 @@
   max-height: 756px;
   position: relative;
   background-color: #f2f2f2;
+	overflow: hidden;
 }
 
 .logo {
@@ -83,6 +93,10 @@
   position: absolute;
   right: 0;
   top: 64px;
+}
+
+.rotation {
+	animation: rotation 20s linear infinite;
 }
 
 /*-----------------block-two-colums-----------------*/
