--- a/styles/style.css
+++ b/styles/style.css
@@ -318,6 +318,26 @@
   z-index: -1;
 }
 
+/*----------------------resources----------------------*/
+.resources {
+	padding-top: 100px;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+
+}
+
+.resources__logo-zone {
+	padding: 80px 0 217px;
+	margin: 0 auto;
+	width: 1100px;
+}
+
+.resources__logo {
+	width: 270px;
+	height: 38px;
+}
+
 /*----------------------footer----------------------*/
 .footer {
   display: flex;
