--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -6,7 +6,6 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  background-image: url(/images/header-image.png);
-  background-size: cover;
-  background-repeat: no-repeat;
+  object-fit: cover;
+  object-position: 100% 100%;
 }
