--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -4,7 +4,7 @@
   align-items: center;
   position: relative;
   min-height: 890px;
-  background: url(/images/feynman.png) no-repeat left bottom;
+  background: url(../../images/feynman.png) no-repeat left bottom;
   background-size: 867px 637px;
   background-color: #f2f2f2;
 	padding-top: 80px;
